--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -24,6 +24,15 @@
   <strong>Phone number:</strong>
   <%= @doctor.phone_number %>
 </p>
+<p>
+  <span>Patients</span>
+<%  @doctor.patients.each do |f| %>
+<%= f.first_name %>
+<%= f.last_name %>
+<%= f.email %>
+<%= f.phone_number %>
+<%end%>
+</p>
 
 <%= link_to 'Edit', edit_doctor_path(@doctor) %> |
 <%= link_to 'Back', doctors_path %>
