--- a/app/views/doctors/edit.html.erb
+++ b/app/views/doctors/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Doctor</h1>
+<h2  class="bg-success">Editing Doctor</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @doctor %> |
-<%= link_to 'Back', doctors_path %>
+<%= link_to 'Show', @doctor , class:"btn btn-default"%> 
+<%= link_to 'Back', doctors_path, class:"btn btn-default" %>
