--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Doctors</h1>
+<h2 class="bg-success">Listing Doctors</h2>
 
-<table>
+<table class="table table-striped   table-condensed">
   <thead>
     <tr>
       <th>First name</th>
@@ -22,9 +22,9 @@
         <td><%= doctor.license_no %></td>
         <td><%= doctor.email %></td>
         <td><%= doctor.phone_number %></td>
-        <td><%= link_to 'Show', doctor %></td>
-        <td><%= link_to 'Edit', edit_doctor_path(doctor) %></td>
-        <td><%= link_to 'Destroy', doctor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', doctor ,  class: "btn btn-default" %></td>
+        <td><%= link_to 'Edit', edit_doctor_path(doctor),class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', doctor, method: :delete, class: "btn btn-danger" , data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -32,4 +32,4 @@
 
 <br>
 
-<%= link_to 'New Doctor', new_doctor_path %>
+<%= link_to 'New Doctor', new_doctor_path , class: "btn btn-primary" %>
