--- a/app/views/doctors/new.html.erb
+++ b/app/views/doctors/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Doctor</h1>
+<h2 class="bg-success">New Doctor</h2>
 
-<%= render 'form' %>
+<%= render 'form'  %>
 
-<%= link_to 'Back', doctors_path %>
+<%= link_to 'Back', doctors_path, class:"btn btn-default" %>
