--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,11 +1,11 @@
-<p id="notice"><%= notice %></p>
-
-<p>
+<p id="notice"><%= notice %></p><br>
+<div class="bg-success" >
+<p class="bg-success">
   <strong>First name:</strong>
   <%= @doctor.first_name %>
 </p>
 
-<p>
+<p class="bg-info">
   <strong>Last name:</strong>
   <%= @doctor.last_name %>
 </p>
@@ -15,17 +15,17 @@
   <%= @doctor.license_no %>
 </p>
 
-<p>
+<p  class="bg-danger">
   <strong>Email:</strong>
   <%= @doctor.email %>
 </p>
 
-<p>
+<p class="bg-info">
   <strong>Phone number:</strong>
   <%= @doctor.phone_number %>
 </p>
 <p>
-  <span>Patients</span>
+  <span><strong>Patients:</strong></span>
 <%  @doctor.patients.each do |f| %>
 <%= f.first_name %>
 <%= f.last_name %>
@@ -33,6 +33,6 @@
 <%= f.phone_number %>
 <%end%>
 </p>
-
-<%= link_to 'Edit', edit_doctor_path(@doctor) %> |
-<%= link_to 'Back', doctors_path %>
+</div>
+<%= link_to 'Edit', edit_doctor_path(@doctor),  class:"btn btn-default" %> 
+<%= link_to 'Back', doctors_path,  class:"btn btn-default" %>
