--- a/app/views/patients/edit.html.erb
+++ b/app/views/patients/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing Patient</h1>
+<h2  class="bg-success">Editing Patient</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @patient %> |
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Show', @patient, class:"btn btn-default" %> 
+<%= link_to 'Back', patients_path, class:"btn btn-default" %>
