--- a/app/views/patients/index.html.erb
+++ b/app/views/patients/index.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Patients</h1>
+<h2 class="bg-success" >Listing Patients</h2>
 
-<table>
+<table  class="table table-striped   table-condensed">
   <thead>
     <tr>
       <th>First name</th>
@@ -24,9 +24,9 @@
         <td><%= patient.phone_number %></td>
         <td><%= patient.state %></td>
         <td><%= patient.doctor_id %></td>
-        <td><%= link_to 'Show', patient %></td>
-        <td><%= link_to 'Edit', edit_patient_path(patient) %></td>
-        <td><%= link_to 'Destroy', patient, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', patient,  class: "btn btn-default" %></td>
+        <td><%= link_to 'Edit', edit_patient_path(patient), class: "btn btn-success" %></td>
+        <td><%= link_to 'Destroy', patient, method: :delete, class: "btn btn-danger" ,data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
@@ -34,4 +34,4 @@
 
 <br>
 
-<%= link_to 'New Patient', new_patient_path %>
+<%= link_to 'New Patient', new_patient_path,  class: "btn btn-primary" %>
