--- a/app/views/patients/new.html.erb
+++ b/app/views/patients/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New Patient</h1>
+<h2 class="bg-success">New Patient</h2>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', patients_path %>
+<%= link_to 'Back', patients_path, class:"btn btn-default" %>
